# PyHex

./: .gitignore  Dockerfile  Makefile  README.md  TODO  pyproject.toml
src/: __init__.py  entrypoint.sh
