[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Phelipe Freire Pato <pheprogrammer@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.2"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
requests = "^2.32.3"

[tool.poetry.dev-dependencies]
pytest = "^8.3.3"
flake8 = "^7.1.0"
isort = "^5.10.0"
black = "^24.8.0"
mypy = "^1.3.0"
bandit = "^1.7.4"
autopep8 = "^1.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
